<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>scalad</groupId>
	<artifactId>parent</artifactId>
	<version>0.1</version>
	<packaging>pom</packaging>

	<properties>
		<aspectj.version>1.6.11</aspectj.version>
		<spring.version>3.1.0.RC1</spring.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<scalaVersion>2.9.1</scalaVersion>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
	</dependencies>

	<modules>
		<module>scalad.core</module>
		<module>scalad.core-example</module>

		<module>scalad.plugin</module>

		<module>scalad.spring</module>
		<module>scalad.spring-example</module>

		<module>scalad.akka-example</module>

		<module>scalad.documentation</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.0.2</version>
				</plugin>
				<plugin>
					<groupId>org.scala-tools</groupId>
					<artifactId>maven-scala-plugin</artifactId>
					<version>2.15.3-SNAPSHOT</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.2</version>
				<configuration>
					<classesDirectory>target/classes</classesDirectory>
					<includes>
						<include>**/*Test.class</include>
					</includes>
					<argLine>-Xmx1024M -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>
							src/assemble/sql-scripts.xml
						</descriptor>
					</descriptors>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
				<!--
				<configuration>
					<args>
						<arg>-Xplugin:${settings.localRepository}/com/github/gseitz/lensed/plugin_2.9.1/0.5/plugin_2.9.1-0.5.jar</arg>
						<arg>-Xplugin-require:lensed</arg>
					</args>
					<jvmArgs>
						<jvmArg>-Xms64m</jvmArg>
						<jvmArg>-Xmx1024m</jvmArg>
					</jvmArgs>
				</configuration>
				-->
			</plugin>

			<plugin>
				<groupId>com.agilejava.docbkx</groupId>
				<artifactId>docbkx-maven-plugin</artifactId>
				<version>2.0.13</version>
				<configuration>
					<xincludeSupported>true</xincludeSupported>
					<highlightSource>1</highlightSource>
					<foCustomization>${project.basedir}/src/docbkx/styles/pdf/custom.xsl</foCustomization>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.docbook</groupId>
						<artifactId>docbook-xml</artifactId>
						<version>4.4</version>
						<scope>runtime</scope>
					</dependency>
					<dependency>
						<groupId>net.sf.xslthl</groupId>
						<artifactId>xslthl</artifactId>
						<version>2.0.1</version>
						<scope>runtime</scope>
					</dependency>
					<dependency>
						<groupId>net.sf.offo</groupId>
						<artifactId>fop-hyph</artifactId>
						<version>1.2</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>

				<executions>
					<execution>
						<phase>pre-site</phase>
						<goals>
							<goal>generate-html</goal>
							<goal>generate-pdf</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<version>2.15.3-SNAPSHOT</version>
			</plugin>
		</plugins>
	</reporting>

</project>
